# vapoursynth-zoomvtools

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  codecov.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: zoomvtools.yml
benches/: average.rs  bench.rs  luma.rs  pad.rs  reduce.rs  refine.rs  sad.rs  satd.rs  util.rs
scripts/: benchmark.py
scripts/results/: analyse_10bit.txt  analyse_8bit.txt  super_10bit.txt  super_8bit.txt
src/: average.rs  dct.rs  group_of_planes.rs  lib.rs  mv.rs  mv_analyse.rs  mv_frame.rs  mv_gof.rs  mv_plane.rs  mv_super.rs  pad.rs  params.rs  plane_of_blocks.rs  reduce.rs  simd.rs  tests.rs  util.rs
src/average/: mod.rs  rust.rs  tests.rs
src/mv_analyse/: tests.rs
src/mv_frame/: tests.rs
src/mv_gof/: tests.rs
src/mv_plane/: tests.rs
src/mv_super/: mod.rs  tests.rs
src/pad/: mod.rs  tests.rs
src/reduce/: average.rs  bilinear.rs  cubic.rs  mod.rs  quadratic.rs  tests.rs  triangle.rs
src/reduce/average/: avx2.rs  mod.rs  rust.rs  tests.rs
src/reduce/bilinear/: avx2.rs  mod.rs  rust.rs  tests.rs
src/reduce/cubic/: avx2.rs  mod.rs  rust.rs  tests.rs
src/reduce/quadratic/: avx2.rs  mod.rs  rust.rs  tests.rs
src/reduce/triangle/: avx2.rs  mod.rs  rust.rs  tests.rs
src/refine/: bicubic.rs  bilinear.rs  mod.rs  tests.rs  wiener.rs
src/refine/bicubic/: avx2.rs  mod.rs  rust.rs  tests.rs
src/refine/bilinear/: avx2.rs  mod.rs  rust.rs  tests.rs
src/refine/wiener/: avx2.rs  mod.rs  rust.rs  tests.rs
src/sad/: mod.rs
src/util/: luma.rs  math.rs  mod.rs  plane.rs  sad.rs  satd.rs  tests.rs
src/util/luma/: avx2.rs  mod.rs  rust.rs  tests.rs
src/util/math/: tests.rs
src/util/sad/: mod.rs  rust.rs  tests.rs
src/util/satd/: mod.rs  rust.rs  tests.rs
test_files/: flower_10bit.mkv  flower_8bit.mkv
tests/: README.md  e2e_analyse.rs  e2e_super.rs
tests/common/: comparison.rs  detection.rs  mod.rs  perf.rs  script_gen.rs
