[package]
name = "vapoursynth-zoomvtools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
cpufeatures = "0.2.17"
smallvec = "1.15.0"
vapoursynth = { version = "0.4.0", features = ["vapoursynth-api-36"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
pastey = "0.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.1"
rand_xoshiro = "0.7.0"
vapoursynth = { version = "0.4.0", features = [
    "vapoursynth-api-36",
    "vsscript-api-32",
    "vsscript-functions",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "average"
harness = false
required-features = ["bench"]

[[bench]]
name = "pad"
harness = false
required-features = ["bench"]

[[bench]]
name = "reduce"
harness = false
required-features = ["bench"]

[[bench]]
name = "refine"
harness = false
required-features = ["bench"]

[[bench]]
name = "util"
harness = false
required-features = ["bench"]

[features]
bench = []

[lints.clippy]
# This can result in worse performance. It should probably be allow by default...
manual_div_ceil = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "allow"
# false positive: https://github.com/rust-lang/rust-clippy/issues/14918
unnecessary_to_owned = "allow"
