[package]
name = "vapoursynth-zoomvtools"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
harness = false
name = "average"
required-features = ["bench"]

[[bench]]
harness = false
name = "pad"
required-features = ["bench"]

[[bench]]
harness = false
name = "reduce"
required-features = ["bench"]

[[bench]]
harness = false
name = "refine"
required-features = ["bench"]

[[bench]]
harness = false
name = "util"
required-features = ["bench"]

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
cfg-if = "1.0.0"
cpufeatures = "0.2.17"
fftw = "0.8.0"
num-traits = "0.2.19"
smallvec = "1.15.0"
vapoursynth = "0.5.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
float-cmp = "0.10"
parameterized = "2.1.0"
pastey = "0.2.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.1"
rand_xoshiro = "0.7.0"

[features]
bench = []
e2e = []
# This feature is ONLY for testing and benchmarking.
# If you use it in production it will make me sad.
no_simd = []

[profile.release]
debug = "full"
lto = "thin"
codegen-units = 1
